--- a/app/templates/done.html
+++ b/app/templates/done.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><link rel="stylesheet" href="../static/main.css"></head>
+<head><link rel="stylesheet" href="/static/main.css"></head>
 <body>
   <h1>Done</h1>
   {% if result %}
