--- a/app/templates/publish.html
+++ b/app/templates/publish.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><link rel="stylesheet" href="../static/main.css"></head>
+<head><link rel="stylesheet" href="/static/main.css"></head>
 <body>
   <h1>Publish to TikTok</h1>
   <p>Connected account: {{ username }} ({{ nickname }})</p>
