--- a/app/templates/privacy.html
+++ b/app/templates/privacy.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet" href="/static/main.css">
   <meta charset="utf-8">
   <title>Privacy Policy</title>
+  <link rel="stylesheet" href="{{ url_for('static', path='main.css') }}">
 </head>
 <body>
   <h1>Privacy Policy</h1>
