--- a/app/templates/publish.html
+++ b/app/templates/publish.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
-<head><link rel="stylesheet" href="/static/main.css"></head>
+<head>
+  <meta charset="utf-8">
+  <title>Publish</title>
+  <link rel="stylesheet" href="{{ url_for('static', path='main.css') }}">
+</head>
 <body>
   <h1>Publish to TikTok</h1>
   <p>Connected account: {{ username }} ({{ nickname }})</p>
