--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet" href="/static/main.css">
   <meta charset="utf-8">
   <title>Terms of Service</title>
+  <link rel="stylesheet" href="{{ url_for('static', path='main.css') }}">
 </head>
 <body>
   <h1>Terms of Service</h1>
