--- a/app/templates/publish.html
+++ b/app/templates/publish.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Publish to TikTok</h1>
+  <p><a href="/logout">Logout</a></p>
   <p>Connected account: {{ username }} ({{ nickname }})</p>
 
   <form method="post" action="/publish">
