--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
   <p>Terms: <a href="/terms">Terms</a> | Privacy: <a href="/privacy">Privacy</a></p>
 
   {% if connected %}
+    <p><a href="/logout">Logout</a></p>
     <p>Status: Connected</p>
     <p><a href="/publish">Go to Publish</a></p>
   {% else %}
